chore: update to 0.3.4
